--- a/app/assets/stylesheets/map.css.scss
+++ b/app/assets/stylesheets/map.css.scss
@@ -26,7 +26,7 @@ $tile_size: 256px;
 #map_position, #map_data {
   color: #FFF;
   font-size: .846em;
-  font: normal small "Lucida Grande", Verdana, sans-serif;
+  font: normal 12px Verdana, sans-serif;
   position: absolute;
 }
 
